fix swagger metadata for geolocate
